--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -29,15 +29,13 @@ body {
 }
 
 .item {
-  flex-basis: 300px;
-  width: 100px;
+  flex: 1;
   height: 100px;
   background: #254de4;
   color: #fff;
   margin: 10px;
 
   display: flex;
-  flex-grow: 1;
   justify-content: center;
   align-items: center;
 }
@@ -47,8 +45,10 @@ body {
 }
 
 .item:nth-of-type(2) {
+
 }
 
 .item:nth-of-type(3) {
+
 
 }
