--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,122 +5,69 @@
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #333;
-  background: #a1c3ff;
-}
-
-img {
-  max-width: 100%;
-}
-
-h1,
-h2 {
-  margin-bottom: 15px;
-}
-
-ul {
-  list-style-type: none;
+  background: #f5f5f5;
 }
 
 .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 30px;
+  max-width: 960px;
+  margin: 100px auto;
+  padding: 10px;
+  display: grid;
+  /*grid-template-columns: repeat(3, 1fr);*/
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+
+  /*align-items: end;*/
+  /*justify-content: end;*/
+
+  /*column-gap: 10px;*/
+  /*row-gap: 10px;*/
+
+
+  /*grid-auto-rows: minmax(100px, auto);*/
+  /*grid-template-rows: repeat(3, 1fr);*/
 }
 
-.navbar {
-  background: #3474e6;
+.item {
+  background: steelblue;
   color: #fff;
-  height: 60px;
+  font-size: 20px;
+  padding: 20px;
+  border: skyblue 1px solid;
 }
 
-.navbar .logo {
-  font-size: x-large;
-  font-weight: bold;
-}
+/*.item:nth-of-type(1) {*/
+/*  !*height: 100px;*!*/
+/*  !*width:100px;*!*/
 
-.navbar a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-}
+/*  !*align-self: center;*!*/
+/*  !*justify-self: center;*!*/
 
-.navbar a:hover {
-  color: lightblue;
-}
+/*  background: #000;*/
+/*  grid-column: 1/3;*/
 
-.navbar .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
+/*  !*grid-column-start: 1;*!*/
+/*  !*grid-column-end: 3;*!*/
+/*  !*grid-column: 1 / span 2;*!*/
+/*}*/
 
-.navbar ul {
-  display: flex;
-}
+/*.item:nth-of-type(3) {*/
+/*  background: #333;*/
+/*  grid-row: 2 / 4;*/
+/*}*/
 
-.navbar ul li {
-  margin-left: 20px;
-}
+/*.item:nth-of-type(4) {*/
+/*  background: #333;*/
+/*  grid-row: 2 / 4;*/
+/*}*/
 
 
-.header {
-  background-color: #0151cc;
-  color: #fff;
-  min-height: 400px;
-}
-
-.header h1 {
-  font-size: 3rem;
-  font-weight: bold;
-  line-height: 1.2;
-}
-
-.header img {
-  max-width: 400px;
-}
-
-.header .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.boxes .container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.box {
-  flex: 1;
-  background: #0a51cc;
-  color: #fff;
-  border-radius: 10px;
-  margin: 20px 10px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
-  padding: 15px 20px;
-}
-
-.box i {
-  margin-right: 10px
-}
-
-@media(max-width: 768px) {
-  .header .container {
-    flex-direction: column;
-    padding-top: 20px;
-    text-align: center;
-  }
-
-  .boxes .container {
-    display: block;
-    text-align: center;
+@media (max-width: 500px) {
+  .container {
+    grid-template-columns: 1fr;
   }
 }
-
-
