--- a/css/styles.css
+++ b/css/styles.css
@@ -5,69 +5,117 @@
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #333;
-  background: #f5f5f5;
+  background: #edf2f8;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  line-height: 1.7;
+  font-size: 13px;
 }
 
-.container {
-  max-width: 960px;
+.testimonials {
+  max-width: 1440px;
   margin: 100px auto;
-  padding: 10px;
-  display: grid;
-  /*grid-template-columns: repeat(3, 1fr);*/
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-
-  /*align-items: end;*/
-  /*justify-content: end;*/
-
-  /*column-gap: 10px;*/
-  /*row-gap: 10px;*/
-
-
-  /*grid-auto-rows: minmax(100px, auto);*/
-  /*grid-template-rows: repeat(3, 1fr);*/
-}
-
-.item {
-  background: steelblue;
-  color: #fff;
-  font-size: 20px;
   padding: 20px;
-  border: skyblue 1px solid;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
 }
 
-/*.item:nth-of-type(1) {*/
-/*  !*height: 100px;*!*/
-/*  !*width:100px;*!*/
+.card {
+  background: #fff;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
+  margin-bottom: 10px;
+}
 
-/*  !*align-self: center;*!*/
-/*  !*justify-self: center;*!*/
+.card__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
-/*  background: #000;*/
-/*  grid-column: 1/3;*/
+.card__header h3 {
+  font-size: 15px;
+}
 
-/*  !*grid-column-start: 1;*!*/
-/*  !*grid-column-end: 3;*!*/
-/*  !*grid-column: 1 / span 2;*!*/
-/*}*/
+.card__header p {
+  opacity: 50%;
+}
 
-/*.item:nth-of-type(3) {*/
-/*  background: #333;*/
-/*  grid-row: 2 / 4;*/
-/*}*/
+.card__img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 2px solid #996ed9;
+  margin-right: 10px;
+}
 
-/*.item:nth-of-type(4) {*/
-/*  background: #333;*/
-/*  grid-row: 2 / 4;*/
-/*}*/
+.card__lead {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
 
+.card__quote {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.4;
+  opacity: 70%;
+}
 
-@media (max-width: 500px) {
-  .container {
+.card--bg-purple {
+  color: #fff;
+  background: hsl(263, 55%, 52%) url('../img/bg-pattern-quotation.svg') no-repeat top 10px right 100px;
+}
+
+.card--bg-gray-blue {
+  color: #fff;
+  background: hsl(217, 19%, 35%);
+}
+
+.card--bg-black-blue {
+  color: #fff;
+  background: hsl(219, 29%, 14%);
+}
+
+.card:nth-of-type(1) {
+  grid-column: 1 / 3;
+}
+
+.card:nth-of-type(4) {
+  grid-column: 2 / 4;
+  grid-row: 2;
+}
+
+.card:nth-of-type(5) {
+  grid-column: 4;
+  grid-row: 1 / 3;
+}
+
+footer {
+  text-align: center;
+}
+
+@media (max-width: 956px) {
+  .testimonials {
     grid-template-columns: 1fr;
+    width: 100%;
+  }
+
+  .card:nth-of-type(1) {
+    grid-column: 1;
+  }
+
+  .card:nth-of-type(4) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .card:nth-of-type(5) {
+    grid-column: 1;
+    grid-row: 5;
   }
 }
+
+
